styles/main-style.css
/* ... */
#card-5 .bubble{background-color: #D3EEEF;}

@media only screen and (max-width: 50em){
    .employer-wrapper .copy-wrapper{
        margin: 0rem auto 4rem;
        padding: 15rem 2rem 0;
        background: linear-gradient(0deg, var(--white) 0%, var(--white) 35%, #ffffff00 100%), url(../assets/employer-section/pexels-andrea-piacquadio.jpg);
        background-size: cover;
        background-position: 60% 50%;
    }

    .employer-wrapper .copy{
        max-width: 30rem;
        width: initial;
    }

    .employer-wrapper .cards-wrapper{background: initial;}

    .employer-wrapper .cards{padding: 0 2rem;}

    .employer-wrapper #card-4{margin-top: 0;}
}

/*------------------------------Testimonials Section--------------------------------*/

.testimonials-wrapper{
    overflow-x: hidden;
    position: relative;
}

.centered{
    margin: 10rem auto 0;
    padding: 0 3rem;
    text-align: center;
    max-width: 50rem;
    position: relative;
}

.testimonials-wrapper .blue-circle{
    animation: initial;
    height: 130vh;
    width: 130vh;
    right: -100px;
    top: -150px;
    opacity: .4;
    transform: rotate(160deg);
}

.partners-wrapper{
    display: flex;
    max-width: 70rem;
    margin: 12rem auto;
    padding: 0 4rem;
}

.partners-wrapper .copy{flex-basis: 50%;}

.partners-wrapper img{
    width: 30%;
    padding: 1rem 0 1rem 4rem;
    flex-basis: 50%;
    border-left: #bebebe 1px solid;
}

/* @media only screen and (max-width: 0em) {
    .partners-wrapper .copy{flex-basis: 40%;}

    .partners-wrapper img{
        padding: 1rem 0 1rem 2rem;
        margin-left: 1rem;
    }
} */

@media only screen and (max-width: 60em) {
    .partners-wrapper{
        flex-direction: column;
        max-width: 40rem;
        padding: 0;
        margin: 10rem 2rem;
    }

    .partners-wrapper img{
        width: 80%;
        max-width: 400px;
        padding: 2.2rem 0;
        margin-top: 1rem;
        flex-basis: 50%;
        border-left: initial;
        border-top: #bebebe 1px solid;
    }
}

.slider-wrapper{
    position: relative;
    max-width: 40rem;
    padding: 4rem 6rem 2rem 8rem;
    background-color: #FFF;
    border-radius: 10px;
    box-shadow: 0 2em 2em #41414133;
    margin: 5rem auto;
}

.slider{
    position: relative;
}

.slider p{
    line-height: 2;
    margin-bottom: .8rem;
}

.slider-content-one::before, .slider-content-two::before, .slider-content-three::before, .slider-content-four::before{
    content: url(../assets/testimonial-section/quote-symbol.svg);
    position: absolute;
    left: -80px;
    top: -10px;
}

.slider-nav{
    display: flex;
    justify-content: center; 
}

.left-arrow, .right-arrow{
    width: 25px;
    height: 25px;
    cursor: pointer;
    padding: 1.43em .8em;
}

.dots{
    margin-top: 2em;
    display: flex; 
}

.dot-active{
    border-radius: 50%;
    width: 7px;
    height: 7px;
    background-color: #000;
    margin: 0 .5em;
}

.dot-inactive{
    border-radius: 50%;
    width: 7px;
    height: 7px;
    background-color: #A7A7A7;
    margin: 0 .5em;
}

@media only screen and (max-width: 60em) {
    .slider-wrapper{
        max-width: initial;
        padding: 7rem 8% 2rem 8%;
        margin: 3rem 2rem 5rem;
    }

    .slider-content-one::before, .slider-content-two::before, .slider-content-three::before, .slider-content-four::before{
        left: 0;
        top: -85px;
    }
}

.slider-content-one{display: inline;}

.slider-content-two, .slider-content-three, .slider-content-four{display: none;}

/*For Javascript to activate*/
.slider-content-inactive{display: none;}

.slider-content-active{display: inline;}

/*------------------------------CTA--------------------------------*/

.cta-wrapper{
    background-color: #1E6B89;
    background-image: url(../assets/global/blue-circle.svg);
    background-position: 100% 50%;
    background-repeat: no-repeat;
}

.cta{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
    margin: 0 auto;
    height: 90vh;
    max-width: 90em;
    max-height: 100em;
    min-height: 50em;
    column-gap: 5%;
}

.cta-image{
    grid-row: 1;
    grid-column: 1/3;
    transform-origin: right;
    transform: scale(1.1);
    transform-origin: right;
    align-self: center;
}

.cta-copy{
    grid-column: 3/5;
    grid-row: 1;
    margin-right: 4em;
    align-self: center;
    z-index: 1;
}

@media only screen and (max-width: 70em){
    
    .cta-wrapper{
        column-gap: 0;
    }

    .cta-image{
        transform: scale(1.1) translateX(-2em);
    }

    .cta-copy{
        margin-right: 3em;
    }
}

@media only screen and (max-width: 50em){
    .cta-wrapper{
        margin: 0 auto 10vh;
    }

    .cta-image{
        transform: scale(1.45) translateX(-1em);
        transform-origin: top;
        grid-column: 1/-1;
        width: auto;
        height: 28em;
        margin: -8rem auto 0em;
    }

    .cta-copy{
        padding: 2rem 2rem 3rem;
        grid-column: 1/-1;
        grid-row: 2;
        margin: 0;
        align-self: end;
        /* background: linear-gradient(0deg, #1E6B89 0%, rgb(30, 107, 137) 80%, rgba(30, 107, 137,.9) 90%, rgba(30, 107, 137, .6) 95%, rgba(30, 107, 137, .3) 98%, rgba(30, 107, 137,0) 100%); */
    }
}

/*------------------------------Popup Section--------------------------------*/

.darken{
    display: none;
    transition: 0.4s ease-in-out;
    z-index: 100;
    position: fixed;
    top: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.527);
}

.popup{
    transform: translateY(120vh);
    transition: 0.6s ease-in-out;
    z-index: 101;
    overflow: auto;
    position: fixed;
    max-width: 52rem;
    max-height: 90vh;
    padding: 0 4rem 4rem;
    margin: 0 auto;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: white;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    box-shadow: 0 -1em 2em #41414133;
}
/* ... */

